--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,23 +14,24 @@
     <tr>
       <td><%= book.title %></td>
       <td><%= book.body %></td>
-      <td><%= link_to "show", book_path(book.id) %></td>
-      <td><%= link_to "edit", edit_book_path(book.id) %></td>
-      <td><%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
+      <td><%= link_to "Show", book_path(book.id) %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure？" %></td>
     </tr>
     <% end %>
   </tbody>
 </table>
 
 <% if @book.errors.any?%>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
   <ul>
-    <%# @book.errors.full_messages.each do |message| %>
+    <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
-    <%# end %>
+    <% end %>
   </ul>
 <% end %>
 
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
+<%= form_with model: @book, url: books_path, method: :post do |f| %>
 
   <h2>New Book</h2>
 
