--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<%= flash[:notice] %>
+<p id ="notice"><%= flash[:notice] %></p>
 
 <p><strong>Title:</strong><%= @book.title %></p>
 <p><strong>Body:</strong><%= @book.body %></p>
